--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <!-- Brand and toogle get grouped for better mobile display -->
       <div class="navbar-header">
-          <a class="navbar-brand"> Rails 107 </a>
+          <a class="navbar-brand" href="/" >Rails 107 </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
